--- a/index.qmd
+++ b/index.qmd
@@ -4,9 +4,23 @@ title: ""
 
 ## [Anastasia (Natasa) Anastasiadou]{style="font-weight:500;"}
 
-Hello! My name is Natasa and I'm currently working as a research assistant in [Bioinformatics lab](https://biodataanalysisgroup.github.io/), under the supervision of Dr. Psomopoulos, at the [Institute of Applied Biosciences](https://www.inab.certh.gr/), situated within the [Centre for Research & Technology, Hellas](https://www.certh.gr/root.en.aspx). I received my BSc in Biochemistry and Biotechnology from the University of Thessaly and my M.Sc in Translational Research in Biomedicine from the Democritus University of Thrace.
+Hello! My name is Natasa and this is my personal page! You're welcome to explore and enjoy! 
 
-This site is built with Quarto and shared under a Creative Commons Attribution-ShareAlike 4.0 International License. You're welcome to explore and enjoy!
+
+
+#### About
+
+👩🏻‍💻 Bioinformatics Scientist
+
+👩🏻‍🔬 M.Sc. Translational Research in Biomedicine (Molecular Biology and Genetics Department \| DUTh)
+
+🧬 B.Sc. Biochemistry and Biotechnology (Biochemistry and Biotechnology Department \| UTh)
+
+
+
+
+#### 
+I'm currently working as a research assistant in [Bioinformatics lab](https://biodataanalysisgroup.github.io/), under the supervision of Dr. Psomopoulos, at the [Institute of Applied Biosciences](https://www.inab.certh.gr/), situated within the [Centre for Research & Technology, Hellas](https://www.certh.gr/root.en.aspx).
 
 ![](images/1712050337388.jpg){fig-align="center" width="490"}
 
