--- a/publications.qmd
+++ b/publications.qmd
@@ -2,15 +2,16 @@
 title: ""
 ---
 
-# [Conference Activity]{style="font-weight:400;"}
+# [Conferences and Announcements]{style="font-weight:400;"}
+### [Posters]{style="font-weight:400;"}
 
 - N. Pechlivanis, **A. Anastasiadou**, A. Papageorgiou , E. Pafilis , and F. Psomopoulos, “Οdyssey: an R Shiny App Approach to explore Molecular Biodiversity in Greece, 23rd European Conference on Computational Biology (ECCB)”, Sep. 2024.
 
 - S.-C. Fragkouli, N. Pechlivanis, **A. Anastasiadou**, G. Karakatsoulis, A. Orfanou, P. Kollia, A. Agathangelidis, and F. E. Psomopoulos, “Synth4bench: generating synthetic genomics data for the evaluation of somatic variant callers, 23rd European Conference on Computational Biology (ECCB)”, Sep. 2024.
 
+- G. Gkoliou,  N. Pechlivanis,  S. Chatzileontiadou,  C. Frouzaki,  G. Karakatsoulis,  **A. Anastasiadou**,  E. Vlachonikola,  M. Gerousi,  F. Psomopoulos,  M. Papaioannou,  K. Chlichlia,  K. Stamatopoulos,  E. Hatjiharissi,  A. Chatzidimitriou, “Distinct Immunophenotype and Gene Expression Profiles of T cells In Peripheral Blood Versus Bone Marrow of Patients with Multiple Myeloma, 29th European Hematology Association Congress (EHA)”, June 2024.
 
 - S.-C. Fragkouli, N. Pechlivanis, A. Orfanou, **A. Anastasiadou**, A. Agathangelidis, and F. Psomopoulos, “Synth4bench: a framework for generating synthetic genomics data for the evaluation of somatic variant calling algorithms, 17th Conference of Hellenic Society for Computational Biology and Bioinformatics (HSCBB),” Oct. 2023, doi: 10.5281/zenodo.8432060.
-
 
 
 # [Other]{style="font-weight:400;"}
