--- a/index.qmd
+++ b/index.qmd
@@ -8,12 +8,11 @@ Hello! My name is Natasa and this is my personal page! You're welcome to explore
 
 #### Bio
 
-👩🏻‍💻 Bioinformatics Scientist (INAB | CERTH)
+👩🏻‍💻 Bioinformatics Scientist (INAB \| CERTH)
 
 👩🏻‍🔬 M.Sc. Translational Research in Biomedicine (Molecular Biology & Genetics Department \| DUTh)
 
 🧬 B.Sc. Biochemistry and Biotechnology (Biochemistry & Biotechnology Department \| UTh)
-
 
 #### Current position
 
