--- a/qmd/about.qmd
+++ b/qmd/about.qmd
@@ -17,10 +17,9 @@ comments: false
 ::: column-page
 ## About
 
-I am Natasa and I am a computational scientist, working as a Bioinformatician at the Institute of Applied Biosciences (INAB) of the Centre for Research and Technology Hellas (CERTH).
+I am Natasa and I am a computational scientist, working as a Bioinformatician at [Institute of Applied Biosciences](https://www.inab.certh.gr/) (INAB) situated within the [Centre for Research & Technology, Hellas](https://www.certh.gr/root.en.aspx) (CERTH).
 
 I received my **B.Sc.** in **Biochemistry and Biotechnology** from the University of Thessaly where she completed her thesis entitle “Study of genetic variations in patients with haematological malignancies” in collaboration with INAB. Subsequently, i obtained a **M.Sc.** in **Translational Research in Biomedicine** from the Democritus University of Thrace. During my master’s thesis titled ‘Characterization of *TP53* gene mutations in patients with Chronic Lymphocytic Leukemia,’ i became interested in Bioinformatics.
 
 Currently, my main focus is on analyzing and visualizing NGS data, aiming to extract meaningful biological insights. I am also experienced in creating interactive web applications, making data exploration and visualization more accessible and user-friendly for researchers.
 :::
-
