--- a/qmd/about.qmd
+++ b/qmd/about.qmd
@@ -12,7 +12,7 @@ about:
     - text: Email
       url: "mailto:anastasiadounat@gmail.com"
     - text: CV
-      url: "/files/cv.pdf"
+      url: "./files/cv.pdf"
 comments: false
 ---
 
