--- a/qmd/publications.qmd
+++ b/qmd/publications.qmd
@@ -10,9 +10,9 @@ title: ""
 
 -   A. Iatrou, M. Gerousi, N. Pechlivanis, **A. Anastasiadou**, R. Sandaltzopoulos, I. Sakellari, N. Stavrogianni, F. Psomopoulos, A. Agathangelidis, A. Chatzidimitriou, K. Stamatopoulos, “Evidence for a Pre-Switched Population and Unmutated Immunoglobulin Receptors in IgG-Expressing CLL Stereotyped Subset #4, 30th European Hematology Association Congress (EHA)”, June 2025, PF564.
 
--   A.-Z. Kouroutzidou, S. Laidou, A. Anastasiadou, N. Pechlivanis, M. Fitopoulou, M. Gerousi, P. Rock, C. S. Zent, C. C. Chu, F. Psomopoulos, A. Chatzidimitriou, R. Burack, K. Stamatopoulos, “Genomic Profiling Identifies Unique Molecular Subgroups in Splenic Small B-Cell Lymphomas, 30th European Hematology Association Congress (EHA)”, June 2025, PF1021.
+-   A.-Z. Kouroutzidou, S. Laidou, **A. Anastasiadou**, N. Pechlivanis, M. Fitopoulou, M. Gerousi, P. Rock, C. S. Zent, C. C. Chu, F. Psomopoulos, A. Chatzidimitriou, R. Burack, K. Stamatopoulos, “Genomic Profiling Identifies Unique Molecular Subgroups in Splenic Small B-Cell Lymphomas, 30th European Hematology Association Congress (EHA)”, June 2025, PF1021.
 
--  M. Gerousi, M. Fitopoulou, N. Pechlivanis, A. Anastasiadou, P. Rock, G. Karakatsoulis, M. Smaropoulou, P. Talimtzi, C. C. Chu, C. Zent, R. Burack, E. Theodosiou, F. Psomopoulos, A. Chatzidimitriou, K. Stamatopoulos, “Molecular and Cellular Responses to External Triggering in Primary Splenic Small B-Cell Lymphomas: A Transcriptomic and Bioenergetic Perspective, 30th European Hematology Association Congress (EHA)”, June 2025, PF1011.
+-  M. Gerousi, M. Fitopoulou, N. Pechlivanis, **A. Anastasiadou**, P. Rock, G. Karakatsoulis, M. Smaropoulou, P. Talimtzi, C. C. Chu, C. Zent, R. Burack, E. Theodosiou, F. Psomopoulos, A. Chatzidimitriou, K. Stamatopoulos, “Molecular and Cellular Responses to External Triggering in Primary Splenic Small B-Cell Lymphomas: A Transcriptomic and Bioenergetic Perspective, 30th European Hematology Association Congress (EHA)”, June 2025, PF1011.
 
 #### 2024
 
