--- a/qmd/publications.qmd
+++ b/qmd/publications.qmd
@@ -4,7 +4,7 @@ title: ""
 
 # [Conferences and Announcements]{style="font-weight:400;"}
 
-### [Posters]{style="font-weight:400;"}
+### [Publications]{style="font-weight:400;"}
 
 #### 2025
 
