visual_portfolio updates

--- a/qmd/visual_portfolio.qmd
+++ b/qmd/visual_portfolio.qmd
@@ -1,11 +1,12 @@
 ---
 listing: 
   id: portfolio-listings
-  contents: portfolio
+  contents: 
+    - "portfolio/*.qmd"
   type: grid
   grid-columns: 1  # 1 item per row
   image-height: '25rem'  # Adjust image size
-  sort: "title" 
+  sort: "title"
 ---
 
 ## [Check out some of my public projects below!]{style="font-weight:400;"}
